# registrar

./: .gitignore  API_REFERENCE.md  API_REFERNCE.md  Cargo.toml  README.USAGE.md  README.md
src/: lib.rs
src/name_com/: client.rs  endpoints.rs  mod.rs  types.rs
src/name_com/dns/: mod.rs  types.rs
src/name_com/domain/: mod.rs  types.rs
src/name_com/url_forwarding/: mod.rs  types.rs
src/name_com/vanity_ns/: mod.rs  types.rs
src/porkbun/: client.rs  endpoints.rs  mod.rs  types.rs
src/porkbun/dns/: mod.rs  types.rs
src/porkbun/domain/: mod.rs  types.rs
src/porkbun/ssl/: mod.rs  types.rs
tests/: name_com.rs  porkbun.rs
tests/common/: mod.rs
tests/config/: default.yaml  local.yaml.example
