[package]
name = "registrar"
version = "0.0.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Excerion Sun <dev@excsn.com>"]

description = "A client for domain registrar APIs like Porkbun and Name.com"
keywords = ["api", "dns", "domain", "registrar", "porkbun"]
categories = ["api-bindings", "web-programming"]

readme = "README.md"
repository = "https://github.com/excsn/registrar"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[features]
default = ["porkbun", "name-com"]
porkbun = []
name-com = []