[package]
name = "registrar"
version = "0.9.1"
edition = "2024"
license = "MPL-2.0"
authors = ["Excerion Sun <dev@excsn.com>"]

description = "A client for domain registrar APIs like Porkbun and Name.com"
keywords = ["api", "dns", "domain", "registrar", "porkbun"]
categories = ["api-bindings", "web-programming"]

readme = "README.md"
repository = "https://github.com/excsn/registrar"

exclude = [
  "/tests/",
]

[features]
default = ["porkbun", "name-com"]
porkbun = []
name-com = []
integration-test = []

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
c5store = { version = "^0", features = ["dotenv"] }
ctor = "0.2"
once_cell = "^1.19"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
serde = "^1.0"
uuid = { version = "^1.18", features = ["v4"] }

[[test]]
name = "name_com"
path = "tests/name_com.rs"
required-features = ["name-com", "integration-test"]

[[test]]
name = "porkbun"
path = "tests/porkbun.rs"
required-features = ["porkbun", "integration-test"]